// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`suggestion mode: add a block to a column 1`] = `
"<blockGroup>
  <columnList id="cols">
    <column id="col-left" width="1">
      <blockContainer id="left-p">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
      </blockContainer>
    </column>
    <column id="col-right" width="1">
      <blockContainer id="0">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Right column</paragraph>
      </blockContainer>
    </column>
  </columnList>
</blockGroup>"
`;

exports[`suggestion mode: add a block to a column 2`] = `
"<blockGroup>
  <columnList id="cols">
    <column id="col-left" width="1">
      <blockContainer id="left-p">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
      </blockContainer>
      <blockContainer id="1">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Added to the left column</paragraph>
      </blockContainer>
    </column>
    <column id="col-right" width="1">
      <blockContainer id="0">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Right column</paragraph>
      </blockContainer>
    </column>
  </columnList>
</blockGroup>"
`;

exports[`suggestion mode: add a block to a column 3`] = `
"<doc>
  <blockGroup>
    <columnList id="cols">
      <column id="col-left" width="1">
        <blockContainer id="left-p">
          <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
        </blockContainer>
        <y-attributed-insert userIds="">
          <y-attributed-attrs
            changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
          >
            <blockContainer id="1">
              <y-attributed-insert userIds="">
                <y-attributed-attrs
                  changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                >
                  <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                    <y-attributed-insert userIds="">Added to the left column</y-attributed-insert>
                  </paragraph>
                </y-attributed-attrs>
              </y-attributed-insert>
            </blockContainer>
          </y-attributed-attrs>
        </y-attributed-insert>
      </column>
      <column id="col-right" width="1">
        <blockContainer id="0">
          <paragraph backgroundColor="default" textAlignment="left" textColor="default">Right column</paragraph>
        </blockContainer>
      </column>
    </columnList>
  </blockGroup>
</doc>"
`;

exports[`suggestion mode: create two columns 1`] = `
"<blockGroup>
  <blockContainer id="intro">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">Intro paragraph</paragraph>
  </blockContainer>
</blockGroup>"
`;

exports[`suggestion mode: create two columns 2`] = `
"<blockGroup>
  <blockContainer id="intro">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">Intro paragraph</paragraph>
  </blockContainer>
  <columnList id="0">
    <column id="1" width="1">
      <blockContainer id="2">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
      </blockContainer>
    </column>
    <column id="3" width="1">
      <blockContainer id="4">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Right column</paragraph>
      </blockContainer>
    </column>
  </columnList>
</blockGroup>"
`;

exports[`suggestion mode: create two columns 3`] = `
"<doc>
  <blockGroup>
    <blockContainer id="intro">
      <paragraph backgroundColor="default" textAlignment="left" textColor="default">Intro paragraph</paragraph>
    </blockContainer>
    <y-attributed-insert userIds="">
      <y-attributed-attrs
        changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
      >
        <columnList id="0">
          <y-attributed-insert userIds="">
            <y-attributed-attrs
              changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;width&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
            >
              <column id="1" width="1">
                <y-attributed-insert userIds="">
                  <y-attributed-attrs
                    changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                  >
                    <blockContainer id="2">
                      <y-attributed-insert userIds="">
                        <y-attributed-attrs
                          changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                        >
                          <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                            <y-attributed-insert userIds="">Left column</y-attributed-insert>
                          </paragraph>
                        </y-attributed-attrs>
                      </y-attributed-insert>
                    </blockContainer>
                  </y-attributed-attrs>
                </y-attributed-insert>
              </column>
            </y-attributed-attrs>
          </y-attributed-insert>
          <y-attributed-insert userIds="">
            <y-attributed-attrs
              changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;width&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
            >
              <column id="3" width="1">
                <y-attributed-insert userIds="">
                  <y-attributed-attrs
                    changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                  >
                    <blockContainer id="4">
                      <y-attributed-insert userIds="">
                        <y-attributed-attrs
                          changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                        >
                          <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                            <y-attributed-insert userIds="">Right column</y-attributed-insert>
                          </paragraph>
                        </y-attributed-attrs>
                      </y-attributed-insert>
                    </blockContainer>
                  </y-attributed-attrs>
                </y-attributed-insert>
              </column>
            </y-attributed-attrs>
          </y-attributed-insert>
        </columnList>
      </y-attributed-attrs>
    </y-attributed-insert>
  </blockGroup>
</doc>"
`;

exports[`suggestion mode: remove a column 1`] = `
"<blockGroup>
  <columnList id="cols">
    <column id="col-left" width="1">
      <blockContainer id="0">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
      </blockContainer>
    </column>
    <column id="col-right" width="1">
      <blockContainer id="1">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Right column</paragraph>
      </blockContainer>
    </column>
  </columnList>
</blockGroup>"
`;

exports[`suggestion mode: remove a column 2`] = `
"<blockGroup>
  <blockContainer id="0">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
  </blockContainer>
</blockGroup>"
`;

exports[`suggestion mode: remove a column 3`] = `
"<doc>
  <blockGroup>
    <y-attributed-delete userIds="">
      <y-attributed-attrs
        changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
      >
        <columnList id="cols">
          <y-attributed-delete userIds="">
            <y-attributed-attrs
              changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;width&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
            >
              <column id="col-left" width="1">
                <y-attributed-delete userIds="">
                  <y-attributed-attrs
                    changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                  >
                    <blockContainer id="0">
                      <y-attributed-delete userIds="">
                        <y-attributed-attrs
                          changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                        >
                          <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                            <y-attributed-delete userIds="">Left column</y-attributed-delete>
                          </paragraph>
                        </y-attributed-attrs>
                      </y-attributed-delete>
                    </blockContainer>
                  </y-attributed-attrs>
                </y-attributed-delete>
              </column>
            </y-attributed-attrs>
          </y-attributed-delete>
          <y-attributed-delete userIds="">
            <y-attributed-attrs
              changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;width&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
            >
              <column id="col-right" width="1">
                <y-attributed-delete userIds="">
                  <y-attributed-attrs
                    changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                  >
                    <blockContainer id="1">
                      <y-attributed-delete userIds="">
                        <y-attributed-attrs
                          changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                        >
                          <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                            <y-attributed-delete userIds="">Right column</y-attributed-delete>
                          </paragraph>
                        </y-attributed-attrs>
                      </y-attributed-delete>
                    </blockContainer>
                  </y-attributed-attrs>
                </y-attributed-delete>
              </column>
            </y-attributed-attrs>
          </y-attributed-delete>
        </columnList>
      </y-attributed-attrs>
    </y-attributed-delete>
    <y-attributed-insert userIds="">
      <y-attributed-attrs
        changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
      >
        <blockContainer id="0">
          <y-attributed-insert userIds="">
            <y-attributed-attrs
              changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
            >
              <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                <y-attributed-insert userIds="">Left column</y-attributed-insert>
              </paragraph>
            </y-attributed-attrs>
          </y-attributed-insert>
        </blockContainer>
      </y-attributed-attrs>
    </y-attributed-insert>
  </blockGroup>
</doc>"
`;

exports[`suggestion mode: remove a column from three 1`] = `
"<blockGroup>
  <columnList id="cols">
    <column id="col-left" width="1">
      <blockContainer id="0">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
      </blockContainer>
    </column>
    <column id="col-middle" width="1">
      <blockContainer id="1">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Middle column</paragraph>
      </blockContainer>
    </column>
    <column id="col-right" width="1">
      <blockContainer id="2">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Right column</paragraph>
      </blockContainer>
    </column>
  </columnList>
</blockGroup>"
`;

exports[`suggestion mode: remove a column from three 2`] = `
"<blockGroup>
  <columnList id="cols">
    <column id="col-left" width="1">
      <blockContainer id="0">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
      </blockContainer>
    </column>
    <column id="col-middle" width="1">
      <blockContainer id="1">
        <paragraph backgroundColor="default" textAlignment="left" textColor="default">Middle column</paragraph>
      </blockContainer>
    </column>
  </columnList>
</blockGroup>"
`;

exports[`suggestion mode: remove a column from three 3`] = `
"<doc>
  <blockGroup>
    <columnList id="cols">
      <column id="col-left" width="1">
        <blockContainer id="0">
          <paragraph backgroundColor="default" textAlignment="left" textColor="default">Left column</paragraph>
        </blockContainer>
      </column>
      <column id="col-middle" width="1">
        <blockContainer id="1">
          <paragraph backgroundColor="default" textAlignment="left" textColor="default">Middle column</paragraph>
        </blockContainer>
      </column>
      <y-attributed-delete userIds="">
        <y-attributed-attrs
          changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;width&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
        >
          <column id="col-right" width="1">
            <y-attributed-delete userIds="">
              <y-attributed-attrs
                changes="{&quot;id&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
              >
                <blockContainer id="2">
                  <y-attributed-delete userIds="">
                    <y-attributed-attrs
                      changes="{&quot;backgroundColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textColor&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null},&quot;textAlignment&quot;:{&quot;userIds&quot;:[],&quot;timestamp&quot;:null}}"
                    >
                      <paragraph backgroundColor="default" textAlignment="left" textColor="default">
                        <y-attributed-delete userIds="">Right column</y-attributed-delete>
                      </paragraph>
                    </y-attributed-attrs>
                  </y-attributed-delete>
                </blockContainer>
              </y-attributed-attrs>
            </y-attributed-delete>
          </column>
        </y-attributed-attrs>
      </y-attributed-delete>
    </columnList>
  </blockGroup>
</doc>"
`;
